View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0028679 | Open CASCADE | OCCT:Foundation Classes | public | 2017-04-24 19:20 | 2017-09-29 16:25 |
Reporter | Assigned To | bugmaster | |||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Platform | x86_64 | OS | iphone simulator | ||
Product Version | 7.3.0 | ||||
Target Version | 7.2.0 | Fixed in Version | 7.2.0 | ||
Summary | 0028679: Foundation Classes - OSD_Process::UserName rises EXC_BAD_ACCESS on iphone simulator | ||||
Description | OSD_Process::UserName rises EXC_BAD_ACCESS on iphone simulator | ||||
Steps To Reproduce | n/a | ||||
Tags | No tags attached. | ||||
Test case number | Not needed | ||||
|
Branch CR28679 has been created by ibs. SHA-1: 1dbdacb8472b16c1bbf3ae2cb0065926f4978c36 Detailed log of new commits: Author: ibs Date: Mon Apr 24 19:23:55 2017 +0300 0028679: Foundation Classes - OSD_Process::UserName rises EXC_BAD_ACCESS on iphone simulator check for a null pointer is added |
|
could you please review CR28679 OCCT branch |
|
Branch CR28679 has been updated forcibly by ibs. SHA-1: 24d58afa2f90e7af40a74b7c2c6b501af9f5c540 |
|
Please test the patch. |
|
Dear BugMaster, Branch CR28679 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms and tested on Release mode. SHA-1: 24d58afa2f90e7af40a74b7c2c6b501af9f5c540 Number of compiler warnings: occt component : Linux: 0 (0 on master) Windows: 0 (0 on master) MacOS : 0 (0 on master) products component : Linux: 64 (64 on master) Windows: 0 (0 on master) MacOS : 1202 Regressions/Differences/Improvements: No regressions/differences Testing cases: Not needed Testing on Linux: occt component : Total MEMORY difference: 91813207 / 91866837 [-0.06%] Total CPU difference: 19644.769999999986 / 19560.91000000033 [+0.43%] products component : Total MEMORY difference: 31240592 / 31266420 [-0.08%] Total CPU difference: 5456.209999999986 / 5400.099999999974 [+1.04%] Testing on Windows: occt component : Total MEMORY difference: 58036543 / 58034445 [+0.00%] Total CPU difference: 18187.735387298784 / 18123.182173498568 [+0.36%] products component : Total MEMORY difference: 22650105 / 22611847 [+0.17%] Total CPU difference: 5245.299623499961 / 5410.192680499973 [-3.05%] There are no differences in images found by testdiff. |
|
Dear BugMaster, Branch CR28679 is TESTED. |
|
Branch CR28679 has been deleted by kgv. SHA-1: 24d58afa2f90e7af40a74b7c2c6b501af9f5c540 |
Date Modified | Username | Field | Change |
---|---|---|---|
2017-04-24 19:20 |
|
New Issue | |
2017-04-24 19:20 |
|
Assigned To | => ibs |
2017-04-24 19:33 | git | Note Added: 0065489 | |
2017-04-24 19:33 |
|
Note Added: 0065490 | |
2017-04-24 19:33 |
|
Assigned To | ibs => kgv |
2017-04-24 19:33 |
|
Status | new => resolved |
2017-04-24 19:33 |
|
Steps to Reproduce Updated | |
2017-04-24 19:40 | git | Note Added: 0065491 | |
2017-04-24 19:41 | kgv | Note Added: 0065492 | |
2017-04-24 19:41 | kgv | Assigned To | kgv => bugmaster |
2017-04-24 19:41 | kgv | Status | resolved => reviewed |
2017-04-24 19:41 |
|
Assigned To | bugmaster => abv |
2017-04-24 19:41 |
|
Status | reviewed => assigned |
2017-04-24 19:42 |
|
Assigned To | abv => bugmaster |
2017-04-24 19:42 |
|
Status | assigned => feedback |
2017-04-24 19:45 | kgv | Status | feedback => reviewed |
2017-04-24 20:37 |
|
Assigned To | bugmaster => mkv |
2017-04-26 18:14 |
|
Note Added: 0065571 | |
2017-04-26 18:15 |
|
Note Added: 0065572 | |
2017-04-26 18:15 |
|
Assigned To | mkv => bugmaster |
2017-04-26 18:15 |
|
Status | reviewed => tested |
2017-04-26 18:15 |
|
Test case number | => Not needed |
2017-04-28 13:08 | bugmaster | Changeset attached | => occt master 505e241c |
2017-04-28 13:08 | bugmaster | Status | tested => verified |
2017-04-28 13:08 | bugmaster | Resolution | open => fixed |
2017-05-12 11:36 | git | Note Added: 0065975 | |
2017-09-29 16:19 |
|
Fixed in Version | => 7.2.0 |
2017-09-29 16:25 |
|
Status | verified => closed |