0028679: Foundation Classes - OSD_Process::UserName rises EXC_BAD_ACCESS on iphone simulator

check for a null pointer is added